# ClipSync

./: .gitignore  AGENTS.md  README.en.md  README.md  update.json
clipsync-daemon/: Makefile  binder_clip.c  binder_clip.h  bridge_protocol.c  bridge_protocol.h  clip_bridge_client.c  clip_bridge_client.h  clipboard_poll.c  clipboard_poll.h  clipsyncd.c  crypto_hmac.c  crypto_hmac.h  daemon_config.c  daemon_config.h  device_identity.c  device_identity.h  last_clip.c  last_clip.h  logger.c  logger.h  mdns_publish.c  mdns_publish.h  protocol.h  protocol_json.c  protocol_json.h  softap_detect.c  softap_detect.h  test_bridge_client.c  test_bridge_protocol.c  test_clip  test_clip.c  test_clipboard_poll.c  test_crypto_hmac.c  test_daemon_config.c  test_daemon_contract.ps1  test_last_clip.c  test_protocol_json.c  test_softap_detect.c  test_softap_detect_live.c  ws_server.c  (+1 more)
clipsync-daemon/config/: clipsync.toml
clipsync-daemon/module/: action.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh
clipsync-daemon/module/config/: clipsync.toml
clipsync-daemon/module/initrc/: clipsyncd.rc
clipsync-daemon/tests/: test_bridge_protocol.c  test_crypto_hmac.c  test_daemon_config.c  test_daemon_contract.ps1
clipsync-daemon/tools/: ws_smoke.ps1
clipsync-daemon/zygisk/jni/: Android.mk  Application.mk  main.cpp  zygisk.hpp
clipsync-pc/: Cargo.toml  clipsync.toml.example
clipsync-pc/src/: clip.rs  config.rs  lan_scan.rs  main.rs  mdns.rs  protocol.rs  startup.rs  sync.rs  tray.rs  update.rs  ws.rs
docs/: android-clipboard-architecture.md
(+9 files in other folders)
